--- a/home.html
+++ b/home.html
@@ -7,49 +7,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
-<<<<<<< HEAD
-
-<body>
-<ul>
-  <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="hotline.html">Hotlines</a></li>
-  <li><a href="advice.htm">Advice</a></li>
-  <li><a href="comments.html">Comments</a></li>
-  <li><a href="aboutus.htm">About Us</a></li>
-</ul>
-
-<!-- Sidebar with image -->
-<nav class="w3-top w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-  <div class="bgimg"></div>
-</nav>
-<!-- Page Content -->
-<div class="w3-main w3-padding-large" style="margin-left:40%">
-
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <div class="header">
-       <h1 class="w3-jumbo"><b>El Sol</b></h1>
-       <p>
-
-       </p>
-      <img align = "center" src="sole.jpg" alt="logo" />
-    </div>
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-  </header>
-
-  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
-    <h2>About</h2>
-    <hr class="w3-opacity">
-    <p>Every 98 seconds, an American is sexually assaulted. El Sol is a website intended to aid victims and people who support them.
-      It can be difficult trying to start the healing process, we want to show that you are not alone. On our site
-       you will find pictures, advice, and hotlines on this topic.
-    </p>
-    </div>
-  <!-- Portfolio Section -->
-  <div class="w3-padding-32 w3-content" id="portfolio">
-    <h2 class="w3-text-grey">Pictures</h2>
-    <hr class="w3-opacity">
-=======
 <script src="finalProject.js"></script>
 
 <style>
@@ -57,7 +14,6 @@
 </style>
 
 <body>
->>>>>>> 1d8c9e99bf224eada33e99984b278c74bead9fd8
 
 <div class="navbar">
   <a href="home.html">Home</a>
@@ -181,48 +137,13 @@
       <h2>Contact Us</h2>
       <hr class="w3-opacity">
 
-<<<<<<< HEAD
-
-    <div class="w3-row-padding" style="margin:0 -16px">
-
-      <div class="w3-half w3-margin-bottom">
-        <div class="w3-ul w3-center w3-card w3-hover-shadow" >
-          <div class="w3-dark-grey w3-xlarge w3-padding-small">#MeToo Twitter</div>
-
-    <a class="twitter-timeline" data-width="325" data-height="400" href="https://twitter.com/MeTooMVMT?ref_src=twsrc%5Etfw">
-      Tweets by MeTooMVMT</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <span class="w3-opacity"></span>
-        </div>
-      </div>
-
-      <div class="w3-half w3-margin-bottom">
-        <div class="w3-ul w3-center w3-card w3-hover-shadow">
-          <div class="w3-black w3-xlarge w3-padding-small">#TimesUp Twitter</div>
-
-          <a class="twitter-timeline" data-width="325" data-height="400" href="https://twitter.com/TIMESUPNOW?ref_src=twsrc%5Etfw">
-            Tweets by TIMESUPNOW</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <span class="w3-opacity"></span>
-
-
-      </div>
-    <!-- End Grid/Pricing tables -->
-    </div>
-=======
       <div class="w3-section">
         <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: elsol.email@gmail.com</p>
       </div>
 
->>>>>>> 1d8c9e99bf224eada33e99984b278c74bead9fd8
 
 
-<<<<<<< HEAD
-    <div class="w3-section">
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i>
-        <li><a href="elsol.email@gmail.com">Email: elsol.email@gmail.com</a></li>
-      </p>
-=======
   <!-- End Contact Section -->
->>>>>>> 1d8c9e99bf224eada33e99984b278c74bead9fd8
     </div>
 
 
@@ -232,3 +153,7 @@
 </div>
 </body>
 </html>
+
+
+
+Click here to Reply or Forward
