--- a/aboutus.htm
+++ b/aboutus.htm
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html>
-<title>El Sol: About Us</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="finalProject.css">
-<script src="finalProject.js"></script>
-
-
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
-
 </style>
-
-
 <body>
-<div class="navbar">
-  <a href="home.html">Home</a>
-  <a href="hotline.html">Hotlines</a>
-  <a href="advice.htm">Advice</a>
-  <a href="aboutus.htm">About Us</a>
-</div>
+  <ul>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="hotline.html">Hotlines</a></li>
+    <li><a href="advice.htm">Advice</a></li>
+    <li><a href="aboutus.htm">About Us</a></li>
+  </ul>
 <!-- Header -->
 <!-- <header class="w3-container w3-black w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About the Founders</h1>
@@ -95,7 +89,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h1>Dinahsti Blackburn</h1>
       <h5 class="w3-padding-32">Coder</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="w3-text-grey">Dinahsti is a junior at Manor Senior High School in Manor, Texas. She joined Girls Who Code because she thought it would be an interesting experience; she found out about GWC through one of her mentors in a program she is involved in. Through out the time she attended the program she found out that she isn't really intersted in coding. When Dinahsti has free time she likes to catch up on sleep and to watch Youtube videos and tutorials.</p>
     </div>
   </div>
 </div>
