--- a/aboutus.htm
+++ b/aboutus.htm
@@ -70,7 +70,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h1>Daniel Porcaya Marquina</h1>
       <h5 class="w3-padding-32">Coder</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="w3-text-grey">Dani is a 16 year old junior at Harmony Science Acadeny Pflugerville. They joined the 2018 Girls Who Code Summer Immerssion program because of their interest in computer science and software engineering. In their free time, Dani likes to: draw, play instruments, write, or play sports. Dani was born in Mexico City, Mexico and moved to the US in 2004. They are the youngest of two siblings and have three chihuahuas and a hamster. In the future, Dani aspires to attend the University of Texas, and become a software engineer at a prominent technology company.</p>
     </div>
 
     <div class="w3-third w3-center">
