--- a/aboutus.htm
+++ b/aboutus.htm
@@ -42,7 +42,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h1>Dariela Hernandez</h1>
       <h5 class="w3-padding-32">Lead Coder & Founder</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="w3-text-grey">Dari is a junior at Eagle Pass High School in Eagle Pass, Texas. Girls Who Code was an opportunity brought to her attention by her sister. When she applied she wasn't sure she'd get it, but she did in the end and is super grateful for it!
+      She's made amazing friends and gained new knowledge of coding, and she really likes it! Although fixing bugs can get pretty frustrating, she believes the end result is almost always worth it! In her free time she hangs out with friends, browses Instagram, and
+    draws and paints! When she gets out of high school, she just wants to find something that fulfills her and makes her happy.</p>
     </div>
 
     <div class="w3-third w3-center">
