--- a/aboutus.htm
+++ b/aboutus.htm
@@ -13,12 +13,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
 <body>
-  <ul>
-    <li><a class="active" href="home.html">Home</a></li>
-    <li><a href="hotline.html">Hotlines</a></li>
-    <li><a href="advice.htm">Advice</a></li>
-    <li><a href="aboutus.htm">About Us</a></li>
-  </ul>
+  <div class="navbar">
+    <a href="home.html">Home</a>
+    <a href="hotline.html">Hotlines</a>
+    <a href="advice.htm">Advice</a>
+    <a href="lawyers.htm">Lawyers</a>
+    <a href="aboutus.htm">About Us</a>
+  </div>
 <!-- Header -->
 <!-- <header class="w3-container w3-black w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About the Founders</h1>
@@ -53,7 +54,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <img src="haylie.jpg" width = "50%">
+      <img src="HEY.jpg" width = "50%">
     </div>
 
     <div class="w3-twothird">
@@ -76,7 +77,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-third w3-center">
-      <img src="dani.jpg" width = "50%">
+      <img src="DAN.jpg" width = "50%">
     </div>
   </div>
 </div>
@@ -84,7 +85,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <img src="Dinahsti.jpg" width = "50%">
+      <img src="DINA.jpg" width = "50%">
     </div>
 
     <div class="w3-twothird">
