--- a/aboutus.htm
+++ b/aboutus.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>El Sol:About Us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -45,7 +45,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-third w3-center">
-      <img src="meandhaylie.jpg" width = "50%">
+      <img src="meandhaylie.jpg" width = "70%">
     </div>
   </div>
 </div>
@@ -54,7 +54,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <img src="HEY.jpg" width = "50%">
+      <img src="HEY.jpg" width = "70%">
     </div>
 
     <div class="w3-twothird">
@@ -77,7 +77,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-third w3-center">
-      <img src="DAN.jpg" width = "50%">
+      <img src="DAN.jpg" width = "70%">
     </div>
   </div>
 </div>
@@ -85,7 +85,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <img src="DINA.jpg" width = "50%">
+      <img src="DINA.jpg" width = "70%">
     </div>
 
     <div class="w3-twothird">
