--- a/home.html
+++ b/home.html
@@ -108,7 +108,7 @@
 
         <div class="w3-row-padding" style="margin:0 -16px">
           <div class="w3-half w3-margin-bottom">
-            <ul class="w3-ul w3-center w3-card w3-hover-shadow w3-black">
+            <ul class="w3-ul w3-center w3-card w3-white">
               <li class="w3-black w3-xlarge w3-padding-32">#MeToo Twitter</li>
               <a class="twitter-timeline" data-width="325" data-height="400" href="https://twitter.com/MeTooMVMT?ref_src=twsrc%5Etfw">
                 Tweets by MeTooMVMT</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -118,7 +118,7 @@
           </div>
 
           <div class="w3-half">
-            <ul class="w3-ul w3-center w3-card w3-hover-shadow w3-black">
+            <ul class="w3-ul w3-center w3-card w3-white">
               <li class="w3-black w3-xlarge w3-padding-32">#TimesUp Twitter</li>
               <a class="twitter-timeline" data-width="350" data-height="400" href="https://twitter.com/TIMESUPNOW?ref_src=twsrc%5Etfw">
                 Tweets by TIMESUPNOW</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
