--- a/advice.htm
+++ b/advice.htm
@@ -24,8 +24,15 @@
 }</style>
 
 <style>
-body{
-  background-image: url("Untitled.png"):
+body {
+  background-image: url("untitled2.png");
+  /* width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  /* position: fill; */
+    /* background-repeat: no-repeat;
+    margin-bottom: 0; */ */
 }
 </style>
 
