--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="navbar">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="hotline.html">Hotlines</a>
   <a href="advice.htm">Advice</a>
   <a href="lawyers.htm">Lawyers</a>
